➕ Feat - Initiating the creation of section 3 that will contain my skills and knowledge

--- a/index.html
+++ b/index.html
@@ -111,7 +111,33 @@
             </section>
 
             <section class="section3">
-                kjahkjhskhjdakjdhsk
+                <h1 class="text-center">Minhas habilidades &#40; Se Deus quiser&#41;</h1>
+                <div class="container container-habilidades-geral d-flex col-12">
+                    <div class="container-habilidades col-7">
+                        <img src="imagens/imagens-habilidades/icons8-html.svg" alt="" width="100px">
+                        <img src="imagens/imagens-habilidades/icons8-css.svg" alt="" width="100px">
+                        <img src="imagens/imagens-habilidades/Bootstrap_logo.svg" alt="" width="95px">
+                        <img src="imagens/imagens-habilidades/icons8-sass.svg" alt="" width="100px">
+                        <img src="imagens/imagens-habilidades/icons8-javascript.svg" alt="" width="100px">
+                        <!-- --------------------------------------------------------------------------- -->
+                        <img src="imagens/imagens-habilidades/icons8-typescript.svg" alt="" width="100px">
+                        <img src="imagens/imagens-habilidades/icons8-angular.svg" alt="" width="95px">
+                        <img src="imagens/imagens-habilidades/react-original-wordmark.svg" alt="" width="95px">
+                        <img src="imagens/imagens-habilidades/jquery-plain-wordmark.svg" alt="" width="95px">
+                        <img src="imagens/imagens-habilidades/icons8-mysql.svg" alt="" width="100px">
+                        <!-- --------------------------------------------------------------------------- -->
+                        <img src="imagens/imagens-habilidades/icons8-logo-java-coffee-cup.svg" alt="" width="100px">
+                        <img src="imagens/imagens-habilidades/icons8-spring-boot.svg" alt="" width="95px">
+                        <img src="imagens/imagens-habilidades/icons8-git.svg" alt="" width="100px">
+                        <img src="imagens/imagens-habilidades/icons8-docker.svg" alt="" width="100px">
+                        <img src="imagens/imagens-habilidades/icons8-postgresql.svg" alt="" width="90px">
+                    </div>
+    
+                    <div class="col-5 descri-linguagem">
+                        <h1 class="text-center">Clique em uma habilidade</h1>
+                        <p class="text-center"> NÃO FUNCIONA MEU CHAPA, ESTÁ EM CONSTRUÇÃO!</p>
+                    </div>
+                </div>
             </section>
         </main>
 
