changing page width

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 </div>
             </section>
 
-            <section class="section2">
+            <section class="section2 col-12">
                 <article class="container minha-foto">
                     <img src="imagens/Foto-GyanRibeiro.png" alt="" class="bg-light minha-imagem">
 
