Adding animation to technology buttons and images

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <body>
         
-        <header class="col-12 bg-light">
+        <header class="col-12">
             <nav class="container">
                 <a href=""><img src="imagens/logo2.png" alt="" width="230px"></a>
                 <ul class="mt-4">
