Starting new section

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 
                 <div class="img-main">
                     <img src="imagens/img-main.png" alt="">
+                    <img src="imagens/img-main2.png" alt="" class="imagen2">
                 </div>
             </section>
 
