Changing the logo and building the new section

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         
         <header class="col-12">
             <nav class="container">
-                <a href=""><img src="imagens/logo2.png" alt="" width="230px"></a>
+                <a href=""><img src="imagens/logo-2-PhotoRoom.png-PhotoRoom.png" alt="" width="230px"></a>
                 <ul class="mt-4">
                     <li>
                         <a href="">HOME</a>
@@ -152,7 +152,7 @@
                     <h1>Meus Projetos</h1>
                 </div>
 
-                <section class="section5 container-fluid">
+                <section class="section4-2 container-fluid">
                     <div class="d-flex justify-content-evenly flex-wrap">
                         <article class="mt-5 container-projetos">
                             <div class="border p-1">
@@ -222,6 +222,13 @@
                         </article>
                     </div>
                 </section>
+            </section>
+
+            <section class="section5">
+                <div class="container ps-5">
+                    <h6>Meus outros fundamentos</h6>
+                    <h1>Perfil profissional</h1>
+                </div>
             </section>
         </main>
 
