Adding my essentials - 'Professional Profile'

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
         
         <header class="col-12">
-            <nav class="container">
+            <nav class="container navlist">
                 <a href=""><img src="imagens/logo-2-PhotoRoom.png-PhotoRoom.png" alt="" width="230px"></a>
                 <ul class="mt-4">
                     <li>
@@ -226,8 +226,48 @@
 
             <section class="section5">
                 <div class="container ps-5">
-                    <h6>Meus outros fundamentos</h6>
-                    <h1>Perfil profissional</h1>
+                    <div>
+                        <h6>Meus outros fundamentos</h6>
+                        <h1>Perfil profissional</h1>
+                    </div>
+                    
+                    <div class="row">
+                        <article class="mt-5 col-5">
+                            <img src="imagens/database.png" alt="" width="70px">
+                            <h2 class="mt-3">Estrutura de Dados</h2>
+                            <p>Familiarizado com conceitos fundamentais de estrutura de dados. Com conhecimentos básicos em listas, pilhas, filas e árvores.</p>
+                        </article>
+
+                        <article class="mt-5 col-5">
+                            <img src="imagens/devices.png" alt="" width="70px">
+                            <h2 class="mt-3">Responsividade</h2>
+                            <p>Crio interfaces adaptáveis e visualmente atraentes para diferentes dispositivos, garantindo uma experiência consistente aos usuários.</p>
+                        </article>
+
+                        <aside class="col-2">
+                            <div class="barra-lateral-perfil">
+
+                            </div>
+                        </aside>
+
+                        <article class="mt-5 col-5">
+                            <img src="imagens/clean-code.png" alt="" width="70px">
+                            <h2 class="mt-3">Clean Code</h2>
+                            <p>Buscando aprimorar meu conhecimento em escrever códigos mais legíveis e organizados para facilitar a manutenção e a colaboração em projetos.</p>
+                        </article>
+
+                        <article class="mt-5 col-5">
+                            <img src="imagens/clean-code.png" alt="" width="70px">
+                            <h2 class="mt-3">Clean Code</h2>
+                            <p>Buscando aprimorar meu conhecimento em escrever códigos mais legíveis e organizados para facilitar a manutenção e a colaboração em projetos.</p>
+                        </article>
+
+                        <aside class="col-2">
+                            <div class="barra-lateral-perfil">
+
+                            </div>
+                        </aside>
+                    </div>
                 </div>
             </section>
         </main>
