✅ Feat - Finalizing the section - 'Professional profile'

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                             <div class="mt-4">
                                  <h2>Cãopanheiros</h2>
                                  <p class="mt-4">
-                                    Site desenvolvido com <strong class="destaque-linguagens">HTML</strong>, <strong class="destaque-linguagens">CSS</strong> e <strong class="destaque-linguagens">Javascript</strong>. O objetivo de facilitar o
+                                    Site desenvolvido com <strong class="destaque-linguagens">HTML</strong>, <strong class="destaque-linguagens">CSS</strong> e <strong class="destaque-linguagens">Javascript</strong>. O objetivo é facilitar o
                                     processo de adoção, proporcionando uma plataforma envolvente onde os
                                     visitantes podem explorar perfis de cães disponíveis, aprender sobre a
                                     responsabilidade na adoção e, finalmente, oferecer um lar amoroso e acolhedor
@@ -248,12 +248,6 @@
                             <p>Crio interfaces adaptáveis e visualmente atraentes para diferentes dispositivos, garantindo uma experiência consistente aos usuários.</p>
                         </article>
 
-                        <aside class="col-2">
-                            <div class="barra-lateral-perfil">
-
-                            </div>
-                        </aside>
-
                         <article class="mt-5 col-5">
                             <img src="imagens/clean-code.png" alt="" width="70px">
                             <h2 class="mt-3">Clean Code</h2>
@@ -261,16 +255,10 @@
                         </article>
 
                         <article class="mt-5 col-5">
-                            <img src="imagens/clean-code.png" alt="" width="70px">
-                            <h2 class="mt-3">Clean Code</h2>
-                            <p>Buscando aprimorar meu conhecimento em escrever códigos mais legíveis e organizados para facilitar a manutenção e a colaboração em projetos.</p>
+                            <img src="imagens/semantic-web.png" alt="" width="70px">
+                            <h2 class="mt-3">Semantica</h2>
+                            <p>Buscando compreender e aplicar a semântica no desenvolvimento web para criar códigos mais significativos, acessíveis e amigáveis aos mecanismos de busca.</p>
                         </article>
-
-                        <aside class="col-2">
-                            <div class="barra-lateral-perfil">
-
-                            </div>
-                        </aside>
                     </div>
                 </div>
             </section>
