➕ Feat - Creating a footer for my website and adding an icon to 'contact' in the nav menu

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <a href="">PROJECTS</a>
                     </li>
                     <li>
-                        <a href=""><span class="contact">CONTACT</span></a>
+                        <a href=""><span class="contact">CONTACT <i class="bi bi-person-lines-fill"></i></span></a>
                     </li>
                 </ul>
             </nav>
@@ -297,9 +297,21 @@
             </section>
         </main>
 
-        <footer>
-            <div>
-                Imagem de <a href="https://br.freepik.com/vetores-gratis/site-em-preto-sob-construcao-plana_4958044.htm#query=site%20em%20constru%C3%A7%C3%A3o&position=24&from_view=search&track=ais">Freepik</a>
+        <footer class="d-flex flex-column align-items-center pt-4">
+            <figure>
+                <img src="imagens/Logo-sem-o-nome.png" alt="" width="67px">
+            </figure>
+            <h3>Codando e aprendendo</h3>
+            <div class="d-flex align-items-center icones-footer mt-3">
+                <a href=""><i class="bi bi-github"></i></a>
+                <a href=""><i class="bi bi-linkedin"></i></a>
+                <a href=""><i class="bi bi-whatsapp"></i></a>
+                <a href=""><i class="bi bi-twitter"></i></a>
+                <a href=""><i class="bi bi-envelope-at"></i></a>
+            </div>
+
+            <div class="mt-4 direitos">
+                <p>© 2023 Gyan Ribeiro. Todos os direitos reservados.</p>
             </div>
         </footer>
 
