--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <a href="">ABOUT</a>
                     </li>
                     <li>
-                        <a href="">TECNOLOGIES</a>
+                        <a href="">TECHNOLOGIES</a>
                     </li>
                     <li>
                         <a href="">PROJECTS</a>
