--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     
                     <div>
                         <div>
-                            <span class="word">HELLO WORD</span>
+                            <span class="word">HELLO WORD!</span>
                         </div>
                         <h1>I'am a</h1>
                         <h1 class="mystack">Desenvolvedor Web</h1>
