Replacing the github icon from section 2 with a projects icon

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <div class="nova-div d-flex flex-column align-items-center justify-content-center p-5">
 
                         <div class="atualmente d-flex flex-column align-items-center mb-3">
-                            <img src="imagens/icons8-github.svg" alt="" width="100px">
+                            <img src="imagens/icone-projetos.svg" alt="" width="100px">
                             <h2>Atualmente</h2>
                         </div>
 
