✈ Feat - Starting to apply responsiveness to the project parte2. applying responsiveness in nav menu and section 1.

--- a/index.html
+++ b/index.html
@@ -51,11 +51,13 @@
                 <div class="apresentacao">
                     
                     <div>
-                        <div>
+                        <div class="container-word">
                             <span class="word">HELLO WORD!</span>
                         </div>
-                        <h1>I'am a</h1>
-                        <h1 class="mystack">Desenvolvedor Web</h1>
+                        <div class="titulo-section1">
+                            <h1>I'am a</h1>
+                            <h1 class="mystack">Desenvolvedor Web</h1>
+                        </div>
 
                         <div class="mt-4 contatos">
                             <ul class="mt-3">
@@ -86,7 +88,7 @@
 
                 <div class="img-main">
                     <img src="imagens/img-main.png" alt="Homem de óculos sentado utilizando o computador">
-                    <img src="imagens/img-main2.png" alt="" class="imagen2">
+                    <img src="imagens/10259340_4401278.svg" alt="" class="imagen2">
                 </div>
             </section>
 
