✅ Feat - Finishing the project responsiveness part4. Applying responsiveness across the entire page.

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <article class="container minha-foto">
                     <img src="imagens/Foto-GyanRibeiro.png" alt="foto do desenvolvedor Gyan Ribeiro" class="bg-light minha-imagem">
 
-                    <div class="d-flex flex-column align-items-center">
+                    <div class="d-flex flex-column align-items-center meu-nome">
                         <h2 class="mt-5">
                             Opa, Meu nome é Gyan Ribeiro, tudo bem?
                         </h2>
