Adding 'target_blank' to footer icons

--- a/index.html
+++ b/index.html
@@ -320,10 +320,10 @@
             </figure>
             <h3>Codando e aprendendo</h3>
             <div class="d-flex align-items-center icones-footer mt-3">
-                <a href="https://github.com/GyanRibeiro"><i class="bi bi-github"></i></a>
-                <a href="https://www.linkedin.com/in/gyanribeiro/"><i class="bi bi-linkedin"></i></a>
-                <a href="https://api.whatsapp.com/send?phone=5521965423341&text=Opa,%20tudo%20bem?"><i class="bi bi-whatsapp"></i></a>
-                <a href="https://twitter.com/zGyanz"><i class="bi bi-twitter"></i></a>
+                <a target="_blank" href="https://github.com/GyanRibeiro"><i class="bi bi-github"></i></a>
+                <a target="_blank" href="https://www.linkedin.com/in/gyanribeiro/"><i class="bi bi-linkedin"></i></a>
+                <a target="_blank" href="https://api.whatsapp.com/send?phone=5521965423341&text=Opa,%20tudo%20bem?"><i class="bi bi-whatsapp"></i></a>
+                <a target="_blank" href="https://twitter.com/zGyanz"><i class="bi bi-twitter"></i></a>
                 <a href="gyanribeiro29@gmail.com"><i class="bi bi-envelope-at"></i></a>
             </div>
 
