--- a/index.html
+++ b/index.html
@@ -138,14 +138,14 @@
                             <img src="imagens/imagens-habilidades/icons8-javascript.svg" alt="icone javascript" width="100px">
                             <!-- --------------------------------------------------------------------------- -->
                             <img src="imagens/imagens-habilidades/icons8-typescript.svg" alt="icone typescript" width="100px">
-                             <!-- <img src="imagens/imagens-habilidades/icons8-angular.svg" alt="" width="95px">
-                            <img src="imagens/imagens-habilidades/react-original-wordmark.svg" alt="" width="95px">
+                            <img src="imagens/imagens-habilidades/icons8-angular.svg" alt="" width="95px">
+                            <!--<img src="imagens/imagens-habilidades/react-original-wordmark.svg" alt="" width="95px">
                             <img src="imagens/imagens-habilidades/jquery-plain-wordmark.svg" alt="" width="95px"> -->
-                            <img src="imagens/imagens-habilidades/icons8-mysql.svg" alt="icone mysql" width="100px">
                             <!-- --------------------------------------------------------------------------- -->
                             <img src="imagens/imagens-habilidades/icons8-logo-java-coffee-cup.svg" alt="icone java" width="100px">
-                            <!-- <img src="imagens/imagens-habilidades/icons8-spring-boot.svg" alt="" width="95px"> -->
+                            <img src="imagens/imagens-habilidades/icons8-spring-boot.svg" alt="" width="95px">
                             <img src="imagens/imagens-habilidades/icons8-git.svg" alt="icone git" width="100px">
+                            <img src="imagens/imagens-habilidades/icons8-mysql.svg" alt="icone mysql" width="100px">
                             <!-- <img src="imagens/imagens-habilidades/icons8-docker.svg" alt="" width="100px"> -->
                             <img src="imagens/imagens-habilidades/icons8-postgresql.svg" alt="icone postgresql" width="90px">
                         </div>
@@ -332,6 +332,7 @@
             </div>
         </footer>
 
+        <script src="script.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     </body>
 </html>
