--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <div class="container-fluid container-habilidades-geral">
                     <div class="row">
                         <div class="container-habilidades col-12 col-md-7 pe-4">
-                            <img src="imagens/imagens-habilidades/icons8-html.svg" alt="icone HTML" width="100px">
+                            <img class="html" src="imagens/imagens-habilidades/icons8-html.svg" alt="icone HTML" width="100px">
                             <img src="imagens/imagens-habilidades/icons8-css.svg" alt="icone CSS" width="100px">
                             <img src="imagens/imagens-habilidades/Bootstrap_logo.svg" alt="icone bootstrap" width="95px">
                             <img src="imagens/imagens-habilidades/icons8-sass.svg" alt="icone SASS" width="100px">
@@ -152,7 +152,7 @@
         
                         <div class="col-12 col-md-5 descri-linguagem">
                             <h1 class="text-center">Clique em uma habilidade</h1>
-                            <p class="text-center"> NÃO FUNCIONA MEU CHAPA, ESTÁ EM CONSTRUÇÃO!</p>
+                            <p class="text-center legenda"></p>
                         </div>
                     </div>
                 </div>
@@ -332,7 +332,7 @@
             </div>
         </footer>
 
-        <script src="script.js"></script>
+        <script src="js/script.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     </body>
 </html>
