:sparkles: feat: Adicione botão 'Voltar ao topo' com rolagem suave

--- a/index.html
+++ b/index.html
@@ -330,6 +330,10 @@
             <div class="mt-4 direitos d-flex">
                 <p>© 2023 Gyan Ribeiro. Todos os direitos reservados.</p>
             </div>
+
+            <div id="arrowUp" class="hidden">
+                <i class="bi bi-arrow-up-circle-fill"></i>
+            </div>
         </footer>
 
         <script src="js/script.js"></script>
