🎨 Alterar estilo e animação do menu hamburguer

--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
                 <a href=""><img src="imagens/logo-2-PhotoRoom.png-PhotoRoom.png" alt="Logo Gyan Ribeiro" width="230px"></a>
                 <a href=""><img src="imagens/Logo-sem-o-nome.png" alt="" width="60pxpx" class="d-none"></a>
 
-                <div class="d-block d-lg-none d-flex align-items-center menu-hamburguer">
-                    <span class="nome-menu">Menu</span>
-                    <img src="imagens/icons8-cardápio.svg" alt="">
-                </div>
+                <input id="checkbox2" type="checkbox">
+                <label class="toggle toggle2" for="checkbox2">
+                <div id="bar4" class="bars"></div>
+                <div id="bar5" class="bars"></div>
+                <div id="bar6" class="bars"></div>
+                </label>
                 <ul class="mt-4">
                     <li>
                         <a href="/" class="">HOME</a>
