✨ feat: Adiciona um novo projeto ao meu portifólio

--- a/index.html
+++ b/index.html
@@ -222,16 +222,16 @@
 
                         <article class="container-projetos projetos">
                             <div class="border p-1 preview-project">
-                                 <img src="https://img.freepik.com/vetores-gratis/site-em-preto-sob-construcao-plana_23-2148219966.jpg?w=996&t=st=1690949134~exp=1690949734~hmac=04847a2c327d80dac7c5f48dff9f2b68bbedd04b4883bc2bb4df16ce408108c9" alt="imagem ilustrativa de um site em construção" width="100%">
+                                 <img src="imagens/imagens-projetos/reher.png" alt="imagem ilustrativa de um site em construção" width="100%">
                             </div>
          
                             <div class="mt-4">
-                                 <h2>Loren Ipson</h2>
+                                 <h2>Eclipse Hotel - API de Reservas</h2>
                                  <p class="mt-4">
-                                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere eligendi quibusdam libero distinctio voluptatem nisi, voluptates ipsum voluptas illo molestias rem similique beatae laudantium animi odit. Aliquid mollitia dolore sequi!
+                                    O Eclipse Hotel é uma <strong class="destaque-linguagens">API REST</strong> para gerenciamento de reservas em hotéis, permitindo operações de CRUD para clientes, quartos e reservas. Desenvolvido com <strong class="destaque-linguagens">Spring Boot</strong>, <strong class="destaque-linguagens">JPA/Hibernate</strong> e <strong class="destaque-linguagens">PostgreSQL</strong>, ele facilita a administração e consulta de informações sobre hospedagens
                                  </p>
          
-                                 <button class="mt-2"><i class="bi bi-code-slash"></i> Acessar site</button>
+                                 <a href="https://github.com/GyanRibeiro/hotel-reservation-system" target="_blank"><button class="mt-2"><i class="bi bi-git"></i> Ver repositório</button></a>
                             </div>
                         </article>
                     </div>
